fixed toogle on firefox, toggle animation

--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -96,6 +96,7 @@
   left: 0;
   right: 20%;
   top: 100%;
+  z-index: 10;
 }
 
 .suggestion {
